src/objects/Action_Plan_Summary_Result__c.object
<CustomObject>
    <fields>
        <fullName>Action_Plan_Objective__c</fullName>
        <label>Action Plan Objective</label>
        <referenceTo>Action_Plan_Objective__c</referenceTo>
        <relationshipLabel>Action Plan Summary Results</relationshipLabel>
        <relationshipName>Action_Plan_Summary_Results</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Data__c</fullName>
        <description>The serialized data for this Result</description>
        <label>Data</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Behavior - Count</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Behavior - Duration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Skill</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Narrative</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Recommendation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>System</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Action Plan Summary Result</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Action Plan Summary Results</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>